[package]
name = "ethers-reth"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
#discv5 = { git = "https://github.com/armaganyildirak/discv5/", branch = "alloy-rlp" }
#enr = { git = "https://github.com/sigp/enr", rev = "77bde01922fb0b79b0c12bdecc1511b324e8f06c" } 
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
#revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
#revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

[dependencies]
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = ["test-utils"] }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = ["test-utils"] }
reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = ["test-utils"] }
reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum" }

# ethers
ethers = { version = "2.0.14", features = [
  "ipc",
  "ws",
  "rustls",
  "ethers-solc",
] }


# Async
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"

# Misc
eyre = "0.6.8"
thiserror = "1.0.40"

c-kzg = { git = "https://github.com/ethereum/c-kzg-4844", rev = "f5f6f863d475847876a2bd5ee252058d37c3a15d" }

jsonrpsee = { version = "0.20", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serial_test = "2.0.0"


[dev-dependencies]
pretty_assertions = "1.4.0"
